feat: estructura base creada

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de ropa</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <h1>Tienda de ropa</h1>
+    <main>
+      <h2>Nuestros productos</h2>
+      <section id="products">
+        <article></article>
+        <article></article>
+        <article></article>
+        <article></article>
+      </section>
+      <h2>Sobre nosotros</h2>
+      <section id="about">
+        <p>Lorem ipsum .</p>
+        <p>Lorem ipsums.</p>
+      </section>
+    </main>
+  </body>
 </html>
